# bureau

./: Cargo.toml  README.md
src/: lib.rs  memory.rs
src/memory/: intern.rs  pointer.rs
src/memory/intern/: arc.rs  shared.rs
